--- a/deploy/helm/values.yaml
+++ b/deploy/helm/values.yaml
@@ -73,6 +73,9 @@ config:
     - name: "pod_mutate_safe_to_evict"
       enabled: True
       report_only: False
+    - name: "pod_empty_dir_size_limit"
+      enabled: True
+      report_only: False
     - name: "pod_default_seccomp_policy"
       enabled: True
       report_only: False
