--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -1,11 +1,9 @@
 FROM alpine as builder
 RUN apk add --no-cache ca-certificates
-USER nobody
 
 FROM alpine
 EXPOSE 8443/tcp
 COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
-COPY --from=builder /etc/passwd /etc/passwd
 COPY k-rail /k-rail
-USER nobody
+USER 65534
 ENTRYPOINT ["/k-rail", "-config", "/config/config.yml"]
