--- a/deploy/non-compliant-ingress.yaml
+++ b/deploy/non-compliant-ingress.yaml
@@ -6,6 +6,12 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: public
 spec:
-  backend:
-    serviceName: bad-backend
-    servicePort: 666
+  rules:
+  - host: foo.bar
+    http:
+        paths:
+        - path: /
+          backend:
+            serviceName: bad-backend
+            servicePort: 666
+
