--- a/deploy/helm/values.yaml
+++ b/deploy/helm/values.yaml
@@ -98,6 +98,9 @@ config:
     - name: "ingress_unique_ingress_host"
       enabled: True
       report_only: False
+    - name: "persistent_volume_no_host_path"
+      enabled: True
+      report_only: False
 
 exemptions:
   - resource_name: "*"
