--- a/.github/workflows/on-push-master-publish-chart.yml
+++ b/.github/workflows/on-push-master-publish-chart.yml
@@ -34,4 +34,4 @@ jobs:
     - name: Run chart-releaser
       uses: helm/chart-releaser-action@v1.0.0-rc.1
       env:
-        CR_TOKEN: "${{ secrets.CR_TOKEN }}"
+        CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
