Add non-compliant-rolebinding test and update violationText

--- a/deploy/non-compliant-clusterrolebinding.yaml
+++ b/deploy/non-compliant-clusterrolebinding.yaml
@@ -1,4 +1,4 @@
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 # This cluster role binding allows anyone in the "manager" group to read secrets in any namespace.
 kind: ClusterRoleBinding
 metadata:
