Add policy to prevent anonymous and unauthed Cluster Role Bindings and Role Bindings (#75)
* First pass of cluster role binding policy

* Add deploy specs and testing for clusterrolebinding policy

* Create rolebinding resource and policy as well

* Add clusterrolebinding rolebinding policies to helm values

* Revert replicaCount to original

* Fix typo

* Fix typo

* Fix apiGroup and package convention

* Manually rename packages

* Add non-compliant-rolebinding test and update violationText

* Add policies to README

Co-authored-by: shellw <shelley.wu@getcruise.com>
Co-authored-by: Dustin Decker <dustindecker@protonmail.com>

--- a/deploy/helm/templates/deployment.yaml
+++ b/deploy/helm/templates/deployment.yaml
@@ -52,6 +52,8 @@ webhooks:
           - ingresses
           - pods/exec
           - persistentvolumes
+          - clusterrolebindings
+          - rolebindings
     failurePolicy: {{ print .Values.failurePolicy }}
   {{- if .Values.reinvocationPolicy }}
     reinvocationPolicy: {{  print .Values.reinvocationPolicy }}
