Update RBAC for PDB policy
Signed-off-by: Dustin Decker <dustindecker@protonmail.com>

--- a/charts/k-rail/templates/deployment.yaml
+++ b/charts/k-rail/templates/deployment.yaml
@@ -191,6 +191,10 @@ rules:
   - "*"
   resources:
   - ingresses
+  - deployments
+  - replicasets
+  - statefulsets
+  - poddisruptionbudgets
   verbs:
   - list
   - get
