--- a/charts/k-rail/values.yaml
+++ b/charts/k-rail/values.yaml
@@ -24,6 +24,10 @@ tolerations: []
 
 affinity: {}
 
+# Set to the value (in seconds) which the mutatingwebhook should use for a timeout
+# for slower clusters (or larger workloads) this may need to be increased
+webhookTimeout: 1
+
 config:
   cluster_name: default
   log_level: info
