--- a/charts/k-rail/templates/deployment.yaml
+++ b/charts/k-rail/templates/deployment.yaml
@@ -15,13 +15,10 @@ data:
   cert.pem: {{ b64enc $cert.Cert }}
   key.pem: {{ b64enc $cert.Key }}
 ---
-apiVersion: admissionregistration.k8s.io/v1beta1
+apiVersion: admissionregistration.k8s.io/v1
 kind: MutatingWebhookConfiguration
 metadata:
   name: k-rail
-  annotations:
-    checksum/config: {{ print .Values.config | sha256sum }}
-    checksum/exemptions: {{ print .Values.exemptions | sha256sum }}
 webhooks:
   - name: k-rail.cruise-automation.github.com
     clientConfig:
@@ -55,6 +52,7 @@ webhooks:
     reinvocationPolicy: {{  print .Values.reinvocationPolicy }}
   {{- end }}
     sideEffects: None
+    admissionReviewVersions: ["v1"]
     timeoutSeconds: {{ .Values.webhookTimeout }}
     namespaceSelector:
       matchExpressions:
