--- a/charts/k-rail/templates/deployment.yaml
+++ b/charts/k-rail/templates/deployment.yaml
@@ -28,12 +28,13 @@ webhooks:
         path: "/"
       caBundle: {{ b64enc $ca.Cert }}
     rules:
-      - operations: ["CREATE","UPDATE","CONNECT"]
+      - operations: ["CREATE","DELETE","UPDATE","CONNECT"]
         apiGroups: ["*"]
         apiVersions: ["*"]
         resources:
           - clusterrolebindings
           - cronjobs
+          - customresourcedefinitions
           - daemonsets
           - deployments
           - ingresses
