--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,7 +74,12 @@ jobs:
       uses: actions/setup-go@v1
       with:
         go-version: ${{ matrix.go-version }}
-
+    - name: Install Protoc
+      uses: arduino/setup-protoc@v1
+    - name: Install protoc-gen-go
+      run: |
+        go get -u github.com/golang/protobuf/protoc-gen-go
+        go get -u google.golang.org/grpc/cmd/protoc-gen-go-grpc
     - name: Check out code into the Go module directory
       uses: actions/checkout@v1
 
