--- a/.github/workflows/on-push-master-publish-chart.yml
+++ b/.github/workflows/on-push-master-publish-chart.yml
@@ -6,7 +6,7 @@ on:
       - master
     paths:
       - 'charts/**'
-      - '.github/**'         
+      - '.github/**'
       
 jobs:
   build:
@@ -14,7 +14,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout
+      uses: actions/checkout@v2
 
     - name: Fetch history
       run: git fetch --prune --unshallow
@@ -24,14 +25,12 @@ jobs:
         git config user.name "$GITHUB_ACTOR"
         git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
-    # See https://github.com/helm/chart-releaser-action/issues/6
     - name: Install Helm
-      run: |
-        curl -fsSLo get_helm.sh https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3
-        chmod 700 get_helm.sh
-        ./get_helm.sh
+      uses: azure/setup-helm@v1
+      with:
+        version: v3.4.0
 
     - name: Run chart-releaser
-      uses: helm/chart-releaser-action@v1.0.0-rc.1
+      uses: helm/chart-releaser-action@v1.2.0
       env:
         CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
