--- a/.github/workflows/on-push-lint-charts.yml
+++ b/.github/workflows/on-push-lint-charts.yml
@@ -42,5 +42,11 @@ jobs:
         uses: helm/kind-action@v1.0.0
         if: steps.list-changed.outputs.changed == 'true'
 
+
+      - name: Prepare namespace
+        run: |
+          kubectl create namespace k-rail
+          kubectl label namespace k-rail k-rail/ignore=true
+
       - name: Run chart-testing (install)
-        run: ct install
+        run: ct install --namespace k-rail --release-label ci
