Follow-up to #112, better error message when requiring load balancer annotations

--- a/charts/k-rail/values.yaml
+++ b/charts/k-rail/values.yaml
@@ -55,6 +55,10 @@ config:
           - internal
           - Internal
         allow_missing: false
+      - annotation: "networking.gke.io/internal-load-balancer-allow-global-access"
+        allowed_values:
+          - true
+        allow_missing: false
   plugin_config:
     example_plugin:
       threshold: 1.0
