Initial policy to require Istio VirtualService Gateways

--- a/charts/k-rail/values.yaml
+++ b/charts/k-rail/values.yaml
@@ -59,6 +59,11 @@ config:
         allowed_values:
           - true
         allow_missing: false
+    policy_require_virtualservice_gateways:
+      allowed_gateways:
+        - "istio-system/internal-gateway"
+        - "mesh"
+      allow_empty_gateways: true
   plugin_config:
     example_plugin:
       threshold: 1.0
